--- a/index.html
+++ b/index.html
@@ -1,128 +1,92 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Juan Pablo Niño Cortés - Contacto</title>
-<style>
-    body {
-        margin: 0;
-        font-family: 'Arial', sans-serif;
-        background-color: #121212;
-        color: #fff;
-        text-align: center;
-        padding: 20px;
-    }
-
-    .container {
-        max-width: 400px;
-        margin: auto;
-    }
-
-    .logo img {
-        width: 180px;
-        margin-top: 10px;
-    }
-
-    .photo img {
-        width: 140px;
-        height: 140px;
-        border-radius: 50%;
-        border: 4px solid #00C2A8;
-        margin: 20px 0;
-    }
-
-    h1 {
-        font-size: 24px;
-        margin-bottom: 5px;
-    }
-
-    h2 {
-        font-size: 18px;
-        color: #00C2A8;
-        margin-bottom: 20px;
-    }
-
-    .btn {
-        display: block;
-        margin: 12px auto;
-        padding: 14px;
-        width: 80%;
-        text-decoration: none;
-        font-size: 18px;
-        color: #fff;
-        background: linear-gradient(45deg, #00C2A8, #FF6F61);
-        border-radius: 8px;
-        transition: 0.3s;
-    }
-
-    .btn:hover {
-        opacity: 0.8;
-    }
-
-    .social-icons {
-        margin-top: 20px;
-    }
-
-    .social-icons a {
-        margin: 0 10px;
-        display: inline-block;
-    }
-
-    .social-icons img {
-        width: 36px;
-        height: 36px;
-        filter: invert(100%);
-        transition: transform 0.3s;
-    }
-
-    .social-icons img:hover {
-        transform: scale(1.2);
-    }
-
-    footer {
-        margin-top: 30px;
-        font-size: 14px;
-        color: #999;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tarjeta Digital - Juan Pablo Niño Cortes</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #121212;
+            color: #ffffff;
+            text-align: center;
+        }
+        header {
+            background: #1f1f1f;
+            padding: 20px;
+        }
+        header img {
+            max-height: 80px;
+        }
+        .profile {
+            padding: 20px;
+        }
+        .profile img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 3px solid #00FFD1;
+        }
+        h1 {
+            margin: 10px 0;
+            font-size: 24px;
+        }
+        h2 {
+            font-size: 18px;
+            color: #00FFD1;
+        }
+        p {
+            font-size: 16px;
+            color: #cccccc;
+        }
+        .buttons {
+            margin-top: 20px;
+        }
+        .buttons a {
+            display: block;
+            margin: 10px auto;
+            padding: 12px 20px;
+            width: 80%;
+            background: #00FFD1;
+            color: #000;
+            font-weight: bold;
+            border-radius: 8px;
+            text-decoration: none;
+            font-size: 18px;
+        }
+        .social-icons {
+            margin-top: 20px;
+        }
+        .social-icons a {
+            margin: 0 10px;
+            color: #00FFD1;
+            font-size: 24px;
+        }
+    </style>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
-<div class="container">
-    <div class="logo">
-        <img src="logo.png" alt="Miami Institute">
+    <header>
+        <img src="images/logo.png" alt="Logo Miami Institute">
+    </header>
+    <div class="profile">
+        <img src="images/foto.jpg" alt="Juan Pablo Niño Cortes">
+        <h1>Juan Pablo Niño Cortes</h1>
+        <h2>Director of Admissions</h2>
+        <p>Ayudando a estudiantes a cumplir sus sueños en la industria audiovisual</p>
     </div>
-    <div class="photo">
-        <img src="foto.jpg" alt="Juan Pablo Niño Cortés">
+    <div class="buttons">
+        <a href="https://wa.me/573152636881" target="_blank">💬 Hablar conmigo en WhatsApp</a>
+        <a href="mailto:admissions@miaminstitute.com">✉ Envíame un correo</a>
+        <a href="https://www.miaminstitute.com" target="_blank">🌐 Visitar sitio web</a>
     </div>
-    <h1>Juan Pablo Niño Cortés</h1>
-    <h2>Director of Admissions</h2>
-
-    <a class="btn" href="https://wa.me/573152636881" target="_blank">💬 WhatsApp</a>
-    <a class="btn" href="tel:+573152636881">📞 Llamar</a>
-    <a class="btn" href="mailto:admissions@miaminstitute.com">📧 Enviar Correo</a>
-    <a class="btn" href="https://www.miaminstitute.com" target="_blank">🌐 Visitar Sitio Web</a>
-
     <div class="social-icons">
-        <a href="https://www.facebook.com/profile.php?id=61554478325870" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
-        </a>
-        <a href="https://www.instagram.com/miami.institute/" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
-        </a>
-        <a href="https://www.tiktok.com/@miami.institute" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/3046/3046126.png" alt="TikTok">
-        </a>
-        <a href="https://www.youtube.com/@MSAAMI.Institute" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
-        </a>
+        <a href="https://www.facebook.com/profile.php?id=61554478325870" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/miami.institute/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.tiktok.com/@miami.institute" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://www.youtube.com/@MSAAMI.Institute" target="_blank"><i class="fab fa-youtube"></i></a>
     </div>
-</div>
-
-<footer>
-    &copy; 2025 Miami Institute. Todos los derechos reservados.
-</footer>
-
 </body>
 </html>
