--- a/index.html
+++ b/index.html
@@ -1,92 +1,25 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarjeta Digital - Juan Pablo Niño Cortes</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #121212;
-            color: #ffffff;
-            text-align: center;
-        }
-        header {
-            background: #1f1f1f;
-            padding: 20px;
-        }
-        header img {
-            max-height: 80px;
-        }
-        .profile {
-            padding: 20px;
-        }
-        .profile img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: 3px solid #00FFD1;
-        }
-        h1 {
-            margin: 10px 0;
-            font-size: 24px;
-        }
-        h2 {
-            font-size: 18px;
-            color: #00FFD1;
-        }
-        p {
-            font-size: 16px;
-            color: #cccccc;
-        }
-        .buttons {
-            margin-top: 20px;
-        }
-        .buttons a {
-            display: block;
-            margin: 10px auto;
-            padding: 12px 20px;
-            width: 80%;
-            background: #00FFD1;
-            color: #000;
-            font-weight: bold;
-            border-radius: 8px;
-            text-decoration: none;
-            font-size: 18px;
-        }
-        .social-icons {
-            margin-top: 20px;
-        }
-        .social-icons a {
-            margin: 0 10px;
-            color: #00FFD1;
-            font-size: 24px;
-        }
-    </style>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tarjeta Digital - Miami Institute</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <img src="images/logo.png" alt="Logo Miami Institute">
-    </header>
-    <div class="profile">
-        <img src="images/foto.jpg" alt="Juan Pablo Niño Cortes">
-        <h1>Juan Pablo Niño Cortes</h1>
-        <h2>Director of Admissions</h2>
-        <p>Ayudando a estudiantes a cumplir sus sueños en la industria audiovisual</p>
-    </div>
+  <div class="card">
+    <img src="images/logo.png" alt="Logo Miami Institute" class="logo">
+    <img src="images/foto.jpg" alt="Foto Juan Pablo" class="profile">
+    <h1>Juan Pablo Nino Cortes</h1>
+    <h2>Director of Admissions</h2>
+    <p class="description">Ayudando a estudiantes a cumplir sus sueños en la industria audiovisual</p>
+
     <div class="buttons">
-        <a href="https://wa.me/573152636881" target="_blank">💬 Hablar conmigo en WhatsApp</a>
-        <a href="mailto:admissions@miaminstitute.com">✉ Envíame un correo</a>
-        <a href="https://www.miaminstitute.com" target="_blank">🌐 Visitar sitio web</a>
+      <a href="https://wa.me/573152636881" class="btn whatsapp" target="_blank">💬 Hablar conmigo en WhatsApp</a>
+      <a href="mailto:admissions@miaminstitute.com" class="btn email">✉️ Envíame un correo</a>
+      <a href="https://miaminstitute.com" class="btn web" target="_blank">🌐 Visitar sitio web</a>
     </div>
-    <div class="social-icons">
-        <a href="https://www.facebook.com/profile.php?id=61554478325870" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/miami.institute/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.tiktok.com/@miami.institute" target="_blank"><i class="fab fa-tiktok"></i></a>
-        <a href="https://www.youtube.com/@MSAAMI.Institute" target="_blank"><i class="fab fa-youtube"></i></a>
-    </div>
+  </div>
 </body>
 </html>
