--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
     <h1>Juan Pablo Nino Cortes</h1>
     <h2>Director of Admissions</h2>
     <p class="description">Ayudando a estudiantes a cumplir sus sueños en la industria audiovisual</p>
-
+    
     <div class="buttons">
       <a href="https://wa.me/573152636881" class="btn whatsapp" target="_blank">💬 Hablar conmigo en WhatsApp</a>
       <a href="mailto:admissions@miaminstitute.com" class="btn email">✉️ Envíame un correo</a>
       <a href="https://miaminstitute.com" class="btn web" target="_blank">🌐 Visitar sitio web</a>
+    </div>
+
+    <div class="social-icons">
+      <a href="https://www.facebook.com/profile.php?id=61554478325870" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/miami.institute/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
+      <a href="https://www.tiktok.com/@miami.institute" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046126.png" alt="TikTok"></a>
+      <a href="https://www.youtube.com/@MSAAMI.Institute" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"></a>
     </div>
   </div>
 </body>
