--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <div class="card">
     <img src="images/logo.png" alt="Logo Miami Institute" class="logo">
-    <img src="images/foto.jpg" alt="Foto Juan Pablo" class="profile">
+    <img src="images/foto.png" alt="Foto Juan Pablo" class="profile">
     <h1>Juan Pablo Nino Cortes</h1>
     <h2>Director of Admissions</h2>
     <p class="description">Ayudando a estudiantes a cumplir sus sueños en la industria audiovisual</p>
-    
+
     <div class="buttons">
       <a href="https://wa.me/573152636881" class="btn whatsapp" target="_blank">💬 Hablar conmigo en WhatsApp</a>
       <a href="mailto:admissions@miaminstitute.com" class="btn email">✉️ Envíame un correo</a>
