--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="https://www.facebook.com/profile.php?id=61554478325870" target="_blank" aria-label="Facebook"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
       <a href="https://www.instagram.com/miami.institute/" target="_blank" aria-label="Instagram"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
       <a href="https://www.tiktok.com/@miami.institute" target="_blank" aria-label="TikTok"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046126.png" alt="TikTok"></a>
-      <a href="https://www.youtube.com/@miami.Institute" target="_blank" aria-label="YouTube"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"></a>
+      <a href="https://www.youtube.com/@Miaminstitute" target="_blank" aria-label="YouTube"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"></a>
     </div>
   </div>
 </body>
